stop row stretching with wrapper. delayed ajax calls

--- a/src/components/table/table.scss
+++ b/src/components/table/table.scss
@@ -1,10 +1,13 @@
 @import "tables";
 @import "colors";
 
-.ui-table {
+.ui-table__wrapper {
   border-radius: $tables__border-radius;
-  background-color: $white;
   border: 1px solid $border-color;
+}
+
+.ui-table__table {
+  background-color: $white;
   border-collapse: separate;
   border-spacing: 0;
   min-width: 100%;
@@ -13,7 +16,7 @@
   word-break: break-all;
 }
 
-.ui-table__pager {
+.ui-table--pager {
   border-bottom-left-radius: 0;
   border-bottom-right-radius: 0;
 }
